Initial Commit - gRPC Hashmap